--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,7 +6,7 @@ unbind C-b
 bind-key C-a send-prefix
 
 unbind r 
-bind r source-file ~/.config/.tmux.conf
+bind r source-file ~/.config/tmux/tmux.conf
 
 bind -r J resize-pane -D 5
 bind -r K resize-pane -U 5
