--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -36,9 +36,11 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'jimeh/tmux-themepack'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist tmux sessions after computer restart
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions for you every 15 minutes
+set -g @plugin 'egel/tmux-gruvbox'
 # set -g @plugin 'tmux-plugins/tmux-battery'
 
 set -g @themepack 'powerline/default/gray'
+set -g @tmux-gruvbox 'dark'
 
 # set -g status-right 'Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
 
